4 August 2005 Sylvain Pion
- Fix *_fwd.h re-organization for some compilers.

3 August 2005 Sylvain Pion
- Rename CGAL/Interval_arithmetic.h to CGAL/Interval_nt.h.
- [doc] : update doc of Interval_nt.

2 August 2005 Sylvain Pion
- number_type_basic.h : Use forward #include <CGAL/*_fwd.h> instead of declaring
  classes and functions from other packages.

2 August 2005 Sylvain Pion
- number_type_basic.h : update compare(Lazy_exact_nt<ET1>, Lazy_exact_nt<ET2>).
- Move Binary_operator_result.h here.
- Quotient.h : specialize Binary_operator_result<Quotient<NT>, NT>.

1 August 2005 Sylvain Pion
- Rational_traits<Quotient> : make numerator/denominator return by reference.

30 July 2005 Sylvain Pion
- Change return type of sign() and compare() of Interval_nt to Uncertain<>.

29 July 2005 Sylvain Pion
- Quotient : Add template ctor from Quotient<NT2>.

27 July 2005 Sylvain Pion
- NT_converter : Add specializations when converting to Interval_nt
  (calls to_interval()), and when conversion to same type (saves a copy).
  
26 July 2005 Sylvain Pion
- Remove #include <CGAL/_QP_solver/Double.h> from CGAL/number_type_basic.h .

1 July 2005 Sylvain Pion
- Specialize NT_converter for double so that it calls to_double() instead of
  attempting a conversion.

26 March 2005 Sylvain Pion
- Gmpq : add removed mpq_canonicalize().

26 March 2005 Sylvain Pion
- Gmpz/Gmpq : remove some copies.

13 March 2005 Sylvain Pion
- Quotient.h : Use Kernel/mpl.h's First_if_different<>, instead of redefining
  a local equivalent.

8 March 2005 Sylvain Pion
- Use <boost/operators.hpp> to simplify Gmpz and Gmpq.

6 March 2005 Sylvain Pion
- Mark template ctor of Quotient<NT> explicit, as it is too greedy,
  complement it by constructors from NT, int and double.

5 March 2005 Sylvain Pion
- Use <boost/operators.hpp> to simplify <CGAL/Quotient.h>.
- Add test program for the mixed operators of Quotient.

3 March 2005 Sylvain Pion
- long_double.h : SunPRO workaround.

8 February 2005 Sylvain Pion