@@ -71,17 +71,18 @@ if [ $# -ne 0 ] ; then
     compile_and_run $file
   done
 else
+  compile_and_run doubletst
+  compile_and_run floattst
   compile_and_run Gmpq
+  compile_and_run known_bit_size_integers
+  compile_and_run long_doubletst
   compile_and_run MP_Float
   compile_and_run NT_checker
   compile_and_run Quotient
-  compile_and_run _test_valid_finite_double
-  compile_and_run _test_valid_finite_float
-  compile_and_run doubletst
-  compile_and_run floattst
-  compile_and_run long_doubletst
   compile_and_run quotient_io
   compile_and_run simplest_rational
+  compile_and_run _test_valid_finite_double
+  compile_and_run _test_valid_finite_float
   compile_and_run utilities
 fi
 
